@@ -1,3 +1,7 @@
+* Mon Jan 10 2005 Brendan O'Dea <bod@optusnet.com.au> 2.0.15
+- More DoS prevention:  add packet_limit option to apply a hard limit
+  to downstream packets per session.
+
 * Mon Dec 20 2004 Brendan O'Dea <bod@optusnet.com.au> 2.0.14
 - Throttle outgoing LASTSEEN packets to at most one per second for a
   given seq#.
